fixtures/frontend/milestone-2/invalid/equality-missing-eq-instance/main.aivi
val left = Map { "id": 1 }
val right = Map { "id": 1 }
val same:Bool = left == right
